Ajout de contenu supplémentaire à index.html sur la branche principale

--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
 <!DOCTYPE html><html><head><title>Page de base</title></head><body><h1>Bienvenue</h1></body></html>
+<p>Contenu supplémentaire sur la branche principale.</p>
