Résolution des conflits dans index.html lors de la fusion de main dans feature-branch

--- a/index.html
+++ b/index.html
@@ -1,2 +1,6 @@
+HEAD
 <!DOCTYPE html><html><head><title>Page de base</title></head><body><h1>Bienvenue</h1></body></html>
 <p>Contenu supplémentaire sur la branche principale.</p>
+
+<!DOCTYPE html><html><head><link rel="stylesheet" href="style.css"><title>Page de base</title></head><body><h1>Bienvenue</h1></body></html>
+ 0efc1e5 (Ajout de style.css et modification de index.html pour inclure le style)
